
// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.messages";
option java_outer_classname = "MessagesProto";

package api;

service Api {
  rpc GetClients(Empty) returns (stream Client) {}
}

message Empty {}

message ClientStatus {
  string ReplicaSetUUID  = 1;
  string ReplicaSetName = 2;
  int64  ReplicaSetVersion = 3; 
  int64 LastOplogTime = 4;     
  bool   RunningDBBackup = 5;    
  bool   RunningOplogBackup = 6;
  string Compression = 7;       
  string Encrypted = 8;         
  string Destination = 9;       
  string Filename = 10;          
  int64 Started = 11;           
  int64 Finished = 12;          
  string LastError = 13;         
}

message Client {
  int32        version = 1;
  string       ClientID = 2;
  ClientStatus Status = 3;
  int64       LastSeen = 4; // Unix time format
}

message StartBackup {
  int32 version = 1;
}
